# yew-form-submit-events

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: main.rs
src/components/: card.rs  custom_form.rs  fupn.rs  main_title.rs  mod.rs
