[package]
name = "yew-form-submit-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
stylist = { version = "0.13.0", features = ["yew"] }
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
